--- a/src/QsCompiler/Compiler/Templates/QirDriverCpp.tt
+++ b/src/QsCompiler/Compiler/Templates/QirDriverCpp.tt
@@ -23,7 +23,7 @@
 using namespace Microsoft::Quantum;
 using namespace std;
     
-<# if (CppInterop.AtLeastOneArrayArgument(entryPointOperation)) { #>
+<# if (CppInterop.ContainsArgumentType(entryPointOperation, DataType.ArrayType)) { #>
 struct InteropArray
 {
     int64_t Size;
@@ -36,7 +36,7 @@ struct InteropArray
 <# } #>
 
 
-<# if (CppInterop.AtLeastOneRangeArgument(entryPointOperation)) { #>
+<# if (CppInterop.ContainsArgumentType(entryPointOperation, DataType.RangeType)) { #>
 using RangeTuple = tuple<int64_t, int64_t, int64_t>;
 struct InteropRange
 {
