--- a/src/QsCompiler/Compiler/Templates/QirDriverCpp.tt
+++ b/src/QsCompiler/Compiler/Templates/QirDriverCpp.tt
@@ -23,7 +23,7 @@
 using namespace Microsoft::Quantum;
 using namespace std;
     
-<# if (CppInterop.ContainsArgumentType(entryPointOperation, DataType.ArrayType)) { #>
+<# if (entryPointOperation.ContainsArgumentType(DataType.ArrayType)) { #>
 struct InteropArray
 {
     int64_t Size;
@@ -36,7 +36,7 @@ struct InteropArray
 <# } #>
 
 
-<# if (CppInterop.ContainsArgumentType(entryPointOperation, DataType.RangeType)) { #>
+<# if (entryPointOperation.ContainsArgumentType(DataType.RangeType)) { #>
 using RangeTuple = tuple<int64_t, int64_t, int64_t>;
 struct InteropRange
 {
@@ -58,10 +58,10 @@ struct InteropRange
 
 // This is the function corresponding to the QIR entry-point.
 extern "C" void <#= entryPointOperation.Name #>( // NOLINT
-<# for (int i = 0; i < CppInterop.GetSortedArguments(entryPointOperation).Count; i++) {
-    var arg = CppInterop.GetSortedArguments(entryPointOperation)[i];
-    Write($"    {CppInterop.CppType(arg)} {arg.Name}");
-    if (i < CppInterop.GetSortedArguments(entryPointOperation).Count-1) {
+<# for (int i = 0; i < entryPointOperation.InteropArguments.Count; i++) {
+    var arg = entryPointOperation.InteropArguments[i];
+    Write($"    {arg.CppType()} {arg.Name}");
+    if (i < entryPointOperation.InteropArguments.Count-1) {
         WriteLine(",");
     }
 } #>
@@ -151,22 +151,22 @@ int main(int argc, char* argv[])
         "--simulation-output", simulationOutputFile,
         "File where the output produced during the simulation is written");
     
-<# foreach (var arg in CppInterop.GetSortedArguments(entryPointOperation)) {
+<# foreach (var arg in entryPointOperation.InteropArguments) {
     WriteLine("");
-    WriteLine($"    {CppInterop.CppVarType(arg)} {arg.Name};"); 
-    if (CppInterop.CppVarInitialValue(arg) != null) { WriteLine($"    {arg.Name} = {CppInterop.CppVarInitialValue(arg)};"); }
-    WriteLine($"    app.add_option(\"{CppInterop.CliOptionString(arg)}\", {arg.Name}, \"{CppInterop.CliDescription(arg)}\")");
-    if (CppInterop.TransformationType(arg) == null) {
+    WriteLine($"    {arg.CppVarType()} {arg.Name};"); 
+    if (arg.CppVarInitialValue() != null) { WriteLine($"    {arg.Name} = {arg.CppVarInitialValue()};"); }
+    WriteLine($"    app.add_option(\"{arg.CliOptionString()}\", {arg.Name}, \"{arg.CliDescription()}\")");
+    if (arg.TransformationType() == null) {
         WriteLine("        ->required();");
     } else {
-        WriteLine($"        ->required()->transform(CLI::CheckedTransformer({CppInterop.TransformationType(arg)}, CLI::ignore_case));");
+        WriteLine($"        ->required()->transform(CLI::CheckedTransformer({arg.TransformationType()}, CLI::ignore_case));");
     }
 } #>
 
     // With all the options added, parse arguments from the command line.
     CLI11_PARSE(app, argc, argv);
 
-<# foreach (var arg in CppInterop.GetSortedArguments(entryPointOperation)) {
+<# foreach (var arg in entryPointOperation.InteropArguments) {
     switch (arg.Type) {
         case DataType.PauliType:
             WriteLine("    // Translate a PauliID value to its char representation.");
@@ -228,8 +228,8 @@ int main(int argc, char* argv[])
 
     // Run simulation and write the output of the operation to the corresponding stream.
     <#= entryPointOperation.Name #>(
-<# for (int i = 0; i < CppInterop.GetSortedArguments(entryPointOperation).Count; i++) {
-    var arg = CppInterop.GetSortedArguments(entryPointOperation)[i];
+<# for (int i = 0; i < entryPointOperation.InteropArguments.Count; i++) {
+    var arg = entryPointOperation.InteropArguments[i];
     switch (arg.Type) {
         case DataType.PauliType:
             Write($"        {arg.Name}AsCharValue");
@@ -247,14 +247,14 @@ int main(int argc, char* argv[])
             Write($"        {arg.Name}");
             break;
     }
-    if (i < CppInterop.GetSortedArguments(entryPointOperation).Count-1 ) {
+    if (i < entryPointOperation.InteropArguments.Count-1 ) {
         WriteLine(",");
     }
 } #>
 
 );
 
-<# foreach (var arg in CppInterop.GetSortedArguments(entryPointOperation)) {
+<# foreach (var arg in entryPointOperation.InteropArguments) {
     if (arg.Type == DataType.ArrayType && arg.Type == DataType.RangeType) {
         Write($"    FreePointerVector({arg.Name}Vector);");
     }
