now we don't include all code depending on input

--- a/src/QsCompiler/Compiler/Templates/QirDriverCpp.tt
+++ b/src/QsCompiler/Compiler/Templates/QirDriverCpp.tt
@@ -33,10 +33,22 @@ struct InteropArray
         Size(size),
         Data(data){}
 };
+
+template<typename T>
+unique_ptr<InteropArray> CreateInteropArray(vector<T>& v)
+{
+    unique_ptr<InteropArray> array(new InteropArray(v.size(), v.data()));
+    return array;
+}
+
+template<typename S, typename D>
+void TranslateVector(vector<S>& sourceVector, vector<D>& destinationVector, function<D(S&)> translationFunction)
+{
+    destinationVector.resize(sourceVector.size());
+    transform(sourceVector.begin(), sourceVector.end(), destinationVector.begin(), translationFunction);
+
 <# } #>
-
-
-<# if (entryPointOperation.ContainsArgumentType(DataType.RangeType)) { #>
+<# if (entryPointOperation.ContainsArgumentType(DataType.RangeType) || entryPointOperation.ContainsArrayType(DataType.RangeType)) { #>
 using RangeTuple = tuple<int64_t, int64_t, int64_t>;
 struct InteropRange
 {
@@ -54,6 +66,29 @@ struct InteropRange
         Step(get<1>(rangeTuple)),
         End(get<2>(rangeTuple)){}
 };
+
+unique_ptr<InteropRange> CreateInteropRange(RangeTuple rangeTuple)
+{
+    unique_ptr<InteropRange> range(new InteropRange(rangeTuple));
+    return range;
+}
+
+InteropRange* TranslateRangeTupleToInteropRangePointer(RangeTuple& rangeTuple)
+{
+    InteropRange* range = new InteropRange(rangeTuple);
+    return range;
+}
+
+<# } #>
+<# if (entryPointOperation.ContainsArrayType(DataType.RangeType)) { #>
+template<typename T>
+void FreePointerVector(vector<T*>& v)
+{
+    for (auto p : v)
+    {
+        delete p;
+    }
+}
 <# } #>
 
 // This is the function corresponding to the QIR entry-point.
@@ -76,16 +111,16 @@ map<string, bool> BoolAsCharMap{
     {"false", InteropFalseAsChar},
     {"1", InteropTrueAsChar},
     {"true", InteropTrueAsChar}};
-<# } #>
 
+<# } #>
 <# if (entryPointOperation.ContainsArgumentType(DataType.PauliType) || entryPointOperation.ContainsArrayType(DataType.PauliType)) { #>
 map<string, PauliId> PauliMap{
     {"PauliI", PauliId::PauliId_I},
     {"PauliX", PauliId::PauliId_X},
     {"PauliY", PauliId::PauliId_Y},
     {"PauliZ", PauliId::PauliId_Z}};
-<# } #>
 
+<# } #>
 <# if (entryPointOperation.ContainsArgumentType(DataType.ResultType) || entryPointOperation.ContainsArrayType(DataType.ResultType)) { #>
 const char InteropResultZeroAsChar = 0x0;
 const char InteropResultOneAsChar = 0x1;
@@ -95,67 +130,22 @@ map<string, char> ResultAsCharMap{
     {"1", InteropResultOneAsChar},
     {"One", InteropResultOneAsChar}
 };
-<# } #>
 
-<# if (entryPointOperation.ContainsArgumentType(DataType.ArrayType)) { #>
-template<typename T>
-unique_ptr<InteropArray> CreateInteropArray(vector<T>& v)
-{
-    unique_ptr<InteropArray> array(new InteropArray(v.size(), v.data()));
-    return array;
-}
 <# } #>
-
-<# if (entryPointOperation.ContainsArgumentType(DataType.RangeType) || entryPointOperation.ContainsArrayType(DataType.RangeType)) { #>
-unique_ptr<InteropRange> CreateInteropRange(RangeTuple rangeTuple)
-{
-    unique_ptr<InteropRange> range(new InteropRange(rangeTuple));
-    return range;
-}
-<# } #>
-
-<# if (entryPointOperation.ContainsArgumentType(DataType.RangeType)) { #>
-template<typename T>
-void FreePointerVector(vector<T*>& v)
-{
-    for (auto p : v)
-    {
-        delete p;
-    }
-}
-<# } #>
-
 <# if (entryPointOperation.ContainsArgumentType(DataType.PauliType) || entryPointOperation.ContainsArrayType(DataType.PauliType)) { #>
 char TranslatePauliToChar(PauliId& pauli)
 {
     return static_cast<char>(pauli);
 }
-<# } #>
 
-<# if (entryPointOperation.ContainsArgumentType(DataType.ArrayType)) { #>
-template<typename S, typename D>
-void TranslateVector(vector<S>& sourceVector, vector<D>& destinationVector, function<D(S&)> translationFunction)
-{
-    destinationVector.resize(sourceVector.size());
-    transform(sourceVector.begin(), sourceVector.end(), destinationVector.begin(), translationFunction);
-}
 <# } #>
-
-<# if (entryPointOperation.ContainsArgumentType(DataType.RangeType) || entryPointOperation.ContainsArrayType(DataType.RangeType)) { #>
-InteropRange* TranslateRangeTupleToInteropRangePointer(RangeTuple& rangeTuple)
-{
-    InteropRange* range = new InteropRange(rangeTuple);
-    return range;
-}
-<# } #>
-
 <# if (entryPointOperation.ContainsArgumentType(DataType.StringType) || entryPointOperation.ContainsArrayType(DataType.StringType)) { #>
 const char* TranslateStringToCharBuffer(string& s)
 {
     return s.c_str();
 }
-<# } #>
 
+<# } #>
 int main(int argc, char* argv[])
 {
     CLI::App app("QIR Standalone Entry Point Inputs Reference");
